--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-DATABASE_URL=mongodb+srv://u:p@cluster0.mjja2r0.mongodb.net/collection-name?retryWrites=true&w=majority
+DATABASE_URL=
 BCRYPT_SALT_ROUNDS=8
 JWT_ACCESS_SECRET=secret
 JWT_ACCESS_EXPIRES_IN=7d
