--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^5.1.0",
+    "googleapis": "^160.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
+    "uuid": "^11.0.4",
     "zod": "^3.23.6"
   },
   "devDependencies": {
